Add doctype and indent

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head>
+    <head>
 
-</head>
-<body>
-    <a href="test.html">Test link</a>
-</body>
-
+    </head>
+    <body>
+        <a href="test.html">Test link</a>
+    </body>
 </html>
