--- a/test.html
+++ b/test.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <html>
-<head>
-test head
-</head>
-<body>
-    This is a test
-</body>
+    <head>
+        <div>
+            test head
+        </div>
+    </head>
+    <body>
+        </div>
+        This is a test
+        </div>
+    </body>
 </html>
